test_case/rust-lang_rust/38972_277554124_1.rs
Rust
enum Foo { }
fn make_foo() -> Option<Foo> { None }
fn main() {
    match make_foo() { //~ ERROR non-exhaustive patterns
        None => {}
    }
}
